cloudFormation.yaml
# --------------------------------------------------------------------------------------------------
# CloudFormation VPC + EC2 + S3
# Author: Sergii Turyk
#
# Version      Date           Name                Info
# 1.0          17-Feb-2021    Sergii Turyk       Initial Version
#
# --------------------------------------------------------------------------------------------------
AWSTemplateFormatVersion: 2010-09-09
Description: "VPC + EC2+wordpress + S3"


Resources:
  iteaVpc:
    Type: AWS::EC2::VPC
    Properties: 
      CidrBlock: 172.31.0.0/16
      EnableDnsHostnames: 'True'
      EnableDnsSupport: 'True'
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: iteaVpc
      
  iteaSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref iteaVpc
      AvailabilityZone: eu-central-1a
      CidrBlock: 172.31.0.0/20
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: iteaSubnet1

  iteaSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref iteaVpc
      AvailabilityZone: eu-central-1b
      CidrBlock: 172.31.16.0/20
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: iteaSubnet2

  iteaIGateway:
    Type: AWS::EC2::InternetGateway
    Properties: 
      Tags: 
        - Key: Name
          Value: iteaIGateway

  iteaIGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref iteaIGateway
      VpcId: !Ref iteaVpc   

  iteaRouteTable:
    Type: AWS::EC2::RouteTable
    Properties: 
      Tags: 
        - Key: Name
          Value: iteaRouteTable
      VpcId: !Ref iteaVpc

  iteaRoute:
    Type: AWS::EC2::Route
    DependsOn: iteaIGatewayAttachment
    Properties:
       RouteTableId: !Ref iteaRouteTable
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId: !Ref iteaIGateway
  

  iteaPublicSubnet1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref iteaRouteTable
      SubnetId: !Ref iteaSubnet1

  iteaUbntSG:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: Allow SSH and HTTP to client host
      SecurityGroupEgress: 
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags: 
        - Key: Name
          Value: iteaUbntSG
      VpcId: !Ref iteaVpc

  iteaDBSG:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: Allow port 3306 to client host
      SecurityGroupEgress: 
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 0.0.0.0/0
      Tags: 
        - Key: Name
          Value: iteaDBSG
      VpcId: !Ref iteaVpc

  ubuntuITEA1:
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: ami-0932440befd74cdba
      InstanceType: t2.micro
      SubnetId: !Ref iteaSubnet1
      SecurityGroupIds: 
        - Ref: iteaUbntSG
      KeyName: Frankfurt-Key-UBNT	
      Tags: 
        - Key: Name
          Value: ubuntuITEA1
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash 
          sudo apt-get -y update
          sudo apt-get -y install apt-transport-https ca-certificates curl gnupg-agent software-properties-common
          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
          sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
          sudo apt-get -y update
          sudo apt-get -y install docker-ce docker-ce-cli containerd.io
          sudo systemctl start docker
          sudo usermod -aG docker ubuntu
          sudo docker run --rm --name wordpress -it -d -p80:80 wordpress
          sudo docker exec wordpress apt-get -y update
          sudo docker exec wordpress apt -y install wget unzip

  iteaS3BucketSturyk:
    Type: AWS::S3::Bucket
    Properties: 
      BucketName: itea-s3-bucket-sturyk
      AccessControl: PublicRead
      Tags: 
        - Key: Name
          Value: ITEA-S3-bucket-sturyk

  iteaDBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties: 
      DBSubnetGroupDescription: itea-subnetgroup
      DBSubnetGroupName: !Ref iteaSubnet1
      SubnetIds: 
        - Ref: iteaSubnet1
        - Ref: iteaSubnet2
      Tags: 
        - Key: Name
          Value: itea-subnetgroup

  iteaDBInstance:
    Type: AWS::RDS::DBInstance
    Properties: 
      AllocatedStorage: 20
      StorageType: gp2
      DBSubnetGroupName: !Ref iteaDBSubnetGroup
      DBInstanceClass: db.t2.micro
      Engine: mysql
      EngineVersion: 8.0
      DBName: iteadb
      MasterUsername: itea
      MasterUserPassword: q1q1q1q1
      VPCSecurityGroups: 
        - Ref: iteaDBSG



#=================== OUTPUTS ===========================
Outputs:
  ubuntuITEA1:
    Description: IP Address of EC2
    Value: !GetAtt ubuntuITEA1.PublicIp
    Export:
      Name: !Sub "${AWS::StackName}-PublicIp"
